Fixed spacing issues with sidebar and main body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 105px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -105,7 +105,8 @@ body {
  */
 
 .main {
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 50px;
 }
 @media (min-width: 768px) {
   .main {
